# libiphone

./: .gitignore  Makefile.am  configure.ac
cython/: Makefile.am  afc.pxi  file_relay.pxi  glib.pxi  imobiledevice.pxd  imobiledevice.pyx  installation_proxy.pxi  lockdown.pxi  mobile_image_mounter.pxi  mobilebackup.pxi  mobilesync.pxi  notification_proxy.pxi  sbservices.pxi  screenshotr.pxi
cython/imobiledevice/: Makefile.am  __init__.py  afc.pyx  base.pxd  base.pyx  file_relay.pyx  idevice.pxd  idevice.pyx  installation_proxy.pyx  lockdown.pyx  mobile_image_mounter.pyx  mobilebackup.pyx  mobilesync.pyx  notification_proxy.pyx  sbservices.pyx  screenshotr.pyx  std.pxi
dev/: msyncclient.c
include/libimobiledevice/: afc.h  file_relay.h  installation_proxy.h  libimobiledevice.h  lockdown.h  mobile_image_mounter.h  mobilebackup.h  mobilesync.h  notification_proxy.h  sbservices.h  screenshotr.h
src/: afc.c  device_link_service.c  device_link_service.h  file_relay.c  idevice.c  idevice.h  installation_proxy.c  lockdown.c  lockdown.h  mobile_image_mounter.c  mobilebackup.c  mobilesync.c  mobilesync.h  notification_proxy.c  property_list_service.c  property_list_service.h  sbservices.c  screenshotr.c
tools/: idevice_id.c  idevicebackup.c  ideviceimagemounter.c  ideviceinfo.c  idevicescreenshot.c  idevicesyslog.c
